<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:elevation="@dimen/dp_2"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="315dp"
        android:orientation="vertical"
        android:background="@drawable/confirm_dialog_layout_bg"
        android:elevation="@dimen/dp_2"
        android:layout_height="245dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fourth_text_size"
                    android:textColor="@color/first_text_color"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_forget_password"
                    />
                <TextView
                    android:layout_marginTop="@dimen/dp_6"
                    android:textColor="@color/first_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/fourth_text_size"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_forget_password_info"
                    />
            </LinearLayout>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:background="@color/line_color"
            android:layout_height="@dimen/line_height_mini" />
        <TextView
            android:id="@+id/find_pwd_by_phone_tv"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#32A9E7"
            android:background="@drawable/forget_pwd_dialog_tv_bg"
            android:textSize="@dimen/fourth_text_size"
            android:layout_height="@dimen/item_height_mini"
            android:text="@string/string_by_phone_number"/>
        <ImageView
            android:layout_width="match_parent"
            android:background="@color/line_color"
            android:layout_height="@dimen/line_height_mini" />
        <TextView
            android:id="@+id/find_pwd_by_email_tv"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#32A9E7"
            android:background="@drawable/forget_pwd_dialog_tv_bg"
            android:textSize="@dimen/fourth_text_size"
            android:layout_height="@dimen/item_height_mini"
            android:text="@string/string_by_email"/>
        <ImageView
            android:layout_width="match_parent"
            android:background="@color/line_color"
            android:layout_height="@dimen/line_height_mini" />
        <TextView
            android:id="@+id/find_pwd_cancel_tv"
            android:layout_width="match_parent"
            android:background="@drawable/forget_pwd_dialog_back_bg"
            android:gravity="center"
            android:textColor="@color/first_text_color"
            android:textSize="@dimen/fourth_text_size"
            android:layout_height="@dimen/item_height_mini"
            android:text="@string/string_return_login"/>
    </LinearLayout>

</LinearLayout>