<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:background="@drawable/confirm_dialog_layout_bg"
    android:elevation="@dimen/dp_2"
    android:layout_height="160dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_confirm_title_tv"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/third_text_size"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:text="@string/string_log_out"
        android:textColor="@color/first_text_color"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:id="@+id/id_confirm_msg_tv"
        android:layout_centerInParent="true"
        android:textSize="@dimen/fourth_text_size"
        android:text="@string/string_ask_log_out"
        android:textColor="@color/first_text_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:id="@+id/id_confirm_cancel_layout"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:background="@color/line_color"
                android:layout_height="1px" />
            <ImageView
                android:layout_width="1px"
                android:background="@color/line_color"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/id_confirm_cancel_tv"
                android:layout_marginTop="2px"
                android:layout_marginEnd="2px"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/text_color_gray"
                android:gravity="center"
                android:background="@drawable/dialog_btn_normal_bg"
                android:layout_centerInParent="true"
                android:textSize="@dimen/fourth_text_size"
                android:text="@string/string_cancel"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/id_confirm_confirm_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:background="@color/line_color"
                android:layout_height="1px" />
            <TextView
                android:layout_marginTop="2px"
                android:id="@+id/id_confirm_confirm_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/dialog_btn_cancel_bg"
                android:gravity="center"
                android:textColor="@color/text_color_blue"
                android:textSize="@dimen/fourth_text_size"
                android:text="@string/string_confirm"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>